[package]
name = "solana-unity3d-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]

libc="0.2.35"
borsh = "0.9.1"
base64 = "0.13.0"
tiny-bip39 = "0.8.0"
solana-sdk = "1.7.2"
solana-program = "1.7.11"
bs58 = "0.4.0"
